[project]
name = "servspy"
version = "0.1.0"
description = "ServSpy is a lightweight tool used for monitoring server status and simply controlling servers, such as through the command lines or the desktops."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 150
exclude = ["build/", "dist/", ".git/", "__pycache__/"]

[tool.ruff.lint]
select = ["E", "F", "PL", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = ["test/"]

[tool.pytest.ini_options]
testpaths = ["test"]
