[project]
name = "servspy"
version = "0.1.0"
description = "ServSpy is a lightweight tool used for monitoring server status and simply controlling servers, such as through the command lines or the desktops."
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[tool.ruff]
target-version = "py310"
line-length = 150
exclude = ["build/", "dist/", ".git/", "__pycache__/", "test/test_instence_setup"]

[tool.ruff.lint]
select = ["E", "F", "W", "PL", "I", "UP"]
ignore = [
    "PLR0911",  # Too many return statements — protocol handlers need flexibility
    "PLR0912",  # Too many branches — protocol dispatch is verbose by nature
    "PLR0913",  # Too many arguments — configuration constructors need many params
    "PLR0915",  # Too many statements — file transfer protocols are inherently verbose
    "PLW0602",  # Global without assignment — module-level state is intentional
    "PLW0603",  # Global statement — module-level state is intentional
    "PLR2004",  # Magic values — protocol constants are integral to the wire format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = ["test/"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--ignore=test/test_instence_setup"
